Update and rename 20121-06-03-assement.md to 20121-06-03-assesment.md

--- a/_posts/20121-06-03-assesment.md
+++ b/_posts/20121-06-03-assesment.md
@@ -1,3 +1,11 @@
+layout:single
+title: "수행평가 정리"
+toc: true
+toc_sticky: true
+toc_label: "페이지 주요 목차"
+
+
+
 ### 01. 사주보기
 ![saju](/assets/images/if1.jpg)
 ~~~c
@@ -10,13 +18,13 @@ scanf("%d,%d,%d",&year,&month,&day);
 result=(year-month+day)%10;
 if(result==0)
 printf("당신의 사주는 대박입니다.\n");
-
-4. github 블로그 목차와 카테고리.hwp 3
-
 else
 printf("당신의 사주는 그럭저럭입니다.\n");
 return 0;
-}~~~ ### 02. 3개의 터널 통과
+}
+~~~ 
+
+### 02. 3개의 터널 통과
 ![tunnul](/assets/images/if2.jpg)
 ~~~c
 #include <stdio.h>
@@ -33,7 +41,9 @@ printf("충돌 %d", tunnul_3);
 else
 printf("무사 통과");
 return 0;
-}~~~ ### 03. 이 달은 며칠까지 있을까?
+}~~~ 
+
+### 03. 이 달은 며칠까지 있을까?
 ![callenderl](/assets/images/if3.jpg)
 ~~~c
 #include <stdio.h>
@@ -58,4 +68,5 @@ printf("28일");
 }
 printf("입니다.\n");
 return 0;
-}~~~
+}
+~~~
