--- a/_posts/20121-06-03-assesment.md
+++ b/_posts/20121-06-03-assesment.md
@@ -45,7 +45,7 @@ return 0;
 
 
 ### 03. 이 달은 며칠까지 있을까?
-![callenderl](/assets/images/if3.jpg)
+![calender1](/assets/images/if3.jpg)
 ~~~c
 #include <stdio.h>
 int main(void)
